--- a/src/views/styles/_header.scss
+++ b/src/views/styles/_header.scss
@@ -36,6 +36,7 @@
   li {
     float: left;
     list-style: none;
+    margin-left: 15px;
 
     &:last-child {
       margin-left: 12px;
@@ -48,7 +49,7 @@
     }
   }
 
-  .btn {
+  .btn, a {
     display: block;
     margin: 0;
     color: #999;
