--- a/src/views/styles/_header.scss
+++ b/src/views/styles/_header.scss
@@ -3,8 +3,8 @@
 //---------------------------------------------------------
 
 .header {
+  flex: 0 0 60px;
   padding: 10px 0;
-  height: 60px;
   overflow: hidden;
   line-height: 40px;
 }
