--- a/src/views/styles/styles.scss
+++ b/src/views/styles/styles.scss
@@ -14,11 +14,11 @@
 "header",
 "sign-in",
 "notification",
-"task-config",
 "task-filters",
 "task-form",
 "task-item",
-"task-list";
+"task-list",
+"to-do-list-config";
 
 
 html {
@@ -26,7 +26,10 @@ html {
 }
 
 body {
-  padding-bottom: 120px;
+  height: 100%;
+  min-height: 100%;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 a {
